--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,6 +3,9 @@
   <h1><%= title %></h1>
   <a href="/profile">Profile</a>
 </div>
+<%- include('summary' ,{account: accounts.saving}) %> <%- include('summary'
+,{account: accounts.checking}) %> <%- include('summary' ,{account:
+accounts.credit}) %>
 <br /><a href="/transfer">Transfer</a>
 
 <%- include('footer') %>
